# dotfiles

./: .aider.chat.history.md  .aider.conf.yml  .aider.input.history  .gitignore  .sops.yaml  AGENTS.md  README.md  flake.nix  home.nix  rustfmt.toml
.aider.tags.cache.v3/: cache.db  cache.db-shm  cache.db-wal
.config/: starship.toml
.jira-cli/: config.json
config/: starship.toml  xdg-open-host-listener.sh
config/hypr/tools/: Cargo.toml
config/hypr/tools/crates/center-window/: Cargo.toml
config/hypr/tools/crates/center-window/src/: main.rs
config/hypr/tools/crates/keybinds-hint/: Cargo.toml
config/hypr/tools/crates/keybinds-hint/src/: main.rs
config/hypr/tools/crates/lid-monitor-handler/: Cargo.toml
config/hypr/tools/crates/lid-monitor-handler/src/: main.rs
config/hypr/tools/crates/open-eww-workspaces/: Cargo.toml
config/hypr/tools/crates/open-eww-workspaces/src/: main.rs
config/hypr/tools/crates/pin-window/: Cargo.toml
config/hypr/tools/crates/pin-window/src/: main.rs
config/hypr/tools/crates/select-wallpaper/: Cargo.toml
config/hypr/tools/crates/select-wallpaper/src/: main.rs
config/hypr/tools/crates/set-wallpaper/: Cargo.toml
config/hypr/tools/crates/set-wallpaper/src/: main.rs
config/hypr/tools/crates/setup-monitors/: Cargo.toml
config/hypr/tools/crates/setup-monitors/src/: main.rs
config/hypr/tools/crates/terminal-dropdown/: Cargo.toml
config/hypr/tools/crates/terminal-dropdown/src/: main.rs
nix/: audio.nix  btop.nix  common.nix  fish.nix  flake.nix  git.nix  kitty.nix  neovim.nix  nix.nix  shell.nix  starship.nix  (+1 more)
(+226 files in other folders)
