[workspace]
resolver = "2"
members = [
  "crates/center-window",
  "crates/keybinds-hint",
  "crates/lid-monitor-handler",
  "crates/open-eww-workspaces",
  "crates/pin-window",
  "crates/select-wallpaper",
  "crates/set-wallpaper",
  "crates/setup-monitors",
  "crates/terminal-dropdown",
]

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
hyprland = "0.4.0-beta.3"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha1 = "0.11"
tokio = { version = "1", features = ["rt", "macros"] }

[profile.release]
opt-level = 3
strip = true
